<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="app_name">Blue NetHunter TWRP App</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayoutScrollingViewBehavior</string>
    <string name="backing_up_wait">Backing up</string>
    <string name="backup_fail">Backup Failed</string>
    <string name="backup_success">Backup Completed Successfully</string>
    <string name="backupimage_boot_button">Backup Boot</string>
    <string name="backupimage_default_filename">recovery.img</string>
    <string name="backupimage_filename_label">Filename:</string>
    <string name="backupimage_recovery_button">Backup Recovery</string>
    <string name="backupimage_root_error">Root Access Required</string>
    <string name="backupimage_scan_error">Unable to locate recovery</string>
    <string name="boot">Boot</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1d of %2d</string>
    <string name="character_counter_pattern">%1d / %2d</string>
    <string name="check_agree_toast">Please check I agree to continue or use the back button to exit.</string>
    <string name="choose_button_label">Select</string>
    <string name="common_google_play_services_unknown_issue">%1s is having trouble with Google Play services. Please try again.</string>
    <string name="consent_check_both_toast">Please check both boxes or press the cancel button to exit.</string>
    <string name="consent_data_processing_checkbox">I consent to the data processing.</string>
    <string name="consent_terms1_checkbox">I accept the </string>
    <string name="consent_terms2_checkbox"><u>terms of use</u>.</string>
    <string name="consent_text">"I agree to the collection of measurement data and system parameters (like location).

I am aware that anonymized data is used statistically, with the purposes of supporting the development and improvement of communication networks as well as usage-related analyses.
I have taken note of the "<u>data privacy declaration</u> and its additional information on data processing.</string>
    <string name="consent_title"><b>Consent to Data Processing</b></string>
    <string name="copy_twrp">&lt;b>{APP_NAME}&lt;/b> &lt;br /> Version {VERSION}&lt;br /> Build {BUILD}&lt;br /> &amp;#169; 2016 - 2018 Ethan Yonker / TeamWin LLC&lt;br /></string>
    <string name="data_availability_message">"Shows the proportion of data connection tests that have been successful during the last 7 days.

The data connection test checks whether your smartphone is able to connect to the internet by downloading a tiny amount of data (no more than 3MB/month).

Values might not be reliable if you operate your phone in power saving mode."</string>
    <string name="data_privacy_declaration">Data Privacy Declaration</string>
    <string name="default_dir">/sdcard</string>
    <string name="device_download_image_title">Select a device image to download</string>
    <string name="device_selected_text">Current Device:</string>
    <string name="device_variants_title">Select a device variant</string>
    <string name="devices_title">Select a device</string>
    <string name="dialog_backup_message">"Do you really want to back up '%2s' to %1s?"</string>
    <string name="dialog_backup_title">Confirm Backup</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_download_message">You will be redirected to the download page. (Note: subscribers download directly in the app without using the browser.)</string>
    <string name="dialog_download_subscriber_message">Are you sure you wish to download this file?</string>
    <string name="dialog_download_title">Download Confirmation</string>
    <string name="dialog_flash_message">"Do you really want to flash '%1s' to %2s?"</string>
    <string name="dialog_flash_title">Confirm Flash</string>
    <string name="dialog_okay">Okay</string>
    <string name="dialog_subscription_google_play_error">In app billing unavailable. Make sure you are signed into a Google Play account.</string>
    <string name="dialog_subscription_google_play_message">Current device is %1s. Do not subscribe if this is not your device. A subscription is not a way to buy support for your device. Continue?</string>
    <string name="dialog_subscription_google_play_title">Subscription Confirmation</string>
    <string name="download_speed_message">"Shows maximum download speed recorded over each mobile network type in the last 7 days.

We measure the speed at which data is sent to your phone when you are using any other application. Our speed test does not use any extra volume of your data plan.

The speeds recorded depend on what you are doing on your phone. They represent the maximum speed you experience.

Values shown are derived from assessments of your used data and are updated every quarter of an hour."</string>
    <string name="download_twrp_button">Download TWRP</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="enable_insight_core">Enable Network Statistics</string>
    <string name="err_device_not_rooted">Device not rooted</string>
    <string name="err_failed_to_fetch">Failed to fetch data from server</string>
    <string name="err_failed_to_fetch_version">Failed to fetch latest version from server</string>
    <string name="err_grant_network_stats_perms">Please grant location and phone permissions to enable network statistics!</string>
    <string name="err_grant_storage_perms">Please grant storage permissions</string>
    <string name="err_locate_recovery_partition">Unable to locate recovery partition</string>
    <string name="err_locate_target_partition">Unable to locate target partition</string>
    <string name="err_no_browser">No web browser found to handle URL</string>
    <string name="err_no_update_filename">Error: No filename found</string>
    <string name="err_select_1_file">Please select only 1 file</string>
    <string name="err_select_file">Please select a file first</string>
    <string name="err_slotselect_device">Image flashing disabled for devices with A/B partitions - future update required</string>
    <string name="err_unknown_flash_type">Unknown flash type</string>
    <string name="error_retry">Retry</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="file_to_flash_label_text">Selected file for flashing to device:</string>
    <string name="flash_boot_button">Flash to Boot</string>
    <string name="flash_fail">Flash Failed!</string>
    <string name="flash_no_file_selected">No file to flash</string>
    <string name="flash_recovery_button">Flash to Recovery</string>
    <string name="flash_success">Flash Completed Successfully!</string>
    <string name="flashing_wait">Flashing</string>
    <string name="folder_selected_text">Selected Folder:</string>
    <string name="graph_data_availability">Data Availability</string>
    <string name="graph_download_speed">Download Speed</string>
    <string name="graph_kbs">%d kbs</string>
    <string name="graph_not_enough_data">Not enough data.</string>
    <string name="graph_strength">Signal Strength</string>
    <string name="graph_strength_bad">Bad</string>
    <string name="graph_strength_excellent">Excellent</string>
    <string name="graph_strength_fair">Fair</string>
    <string name="graph_strength_good">Good</string>
    <string name="graph_strength_poor">Poor</string>
    <string name="home_network_statistics">Network Statistics</string>
    <string name="home_twrp_backup">Backup Existing Recovery</string>
    <string name="home_twrp_flash">TWRP Flash</string>
    <string name="i_agree_checkbox">I agree</string>
    <string name="imprint_legal_information"><u>About &amp; Legal information</u></string>
    <string name="latest_version_text">Latest downloaded version for selected device:</string>
    <string name="ok_button">OK</string>
    <string name="reset_last_version_button">Reset Last Version (Debug)</string>
    <string name="select_device_button">Select Device</string>
    <string name="select_file_button">Select a file to flash..</string>
    <string name="select_folder_button">Select Folder</string>
    <string name="settings_allow_root_checkbox">Run with root permissions</string>
    <string name="settings_allow_root_text">This app can run without root, but most features will not be available without root.</string>
    <string name="settings_update_interval_1day">1 day</string>
    <string name="settings_update_interval_1min">1 minute (debug)</string>
    <string name="settings_update_interval_2days">2 days</string>
    <string name="settings_update_interval_3days">3 days</string>
    <string name="settings_update_interval_4days">4 days</string>
    <string name="settings_update_interval_5days">5 days</string>
    <string name="settings_update_interval_6days">6 days</string>
    <string name="settings_update_interval_7days">7 days</string>
    <string name="settings_update_interval_none">None (Disabled)</string>
    <string name="signals_strength_message">"Shows the proportion of time your phone has been connected at different signal strength levels (excellent, good, fair, poor and bad) when you have been using it in the last 7 days.

Readings are refreshed every time you enter the app."</string>
    <string name="terms_and_conditions_agreement">Check if you agree with the <u>terms and conditions</u></string>
    <string name="twrp_agreement">I agree not to hold Team Win LLC or any developers of this app responsible for my use of this app. I understand that I could brick my device by using this app.</string>
</resources>