<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/onemin" android:title="@string/settings_update_interval_1min" />
    <item android:id="@id/zero" android:title="@string/settings_update_interval_none" />
    <item android:id="@id/one" android:title="@string/settings_update_interval_1day" />
    <item android:id="@id/two" android:title="@string/settings_update_interval_2days" />
    <item android:id="@id/three" android:title="@string/settings_update_interval_3days" />
    <item android:id="@id/four" android:title="@string/settings_update_interval_4days" />
    <item android:id="@id/five" android:title="@string/settings_update_interval_5days" />
    <item android:id="@id/six" android:title="@string/settings_update_interval_6days" />
    <item android:id="@id/seven" android:title="@string/settings_update_interval_7days" />
</menu>