<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="?actionBarSize"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/flash_select_device_button" android:paddingRight="@dimen/button_select_padding_right" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/select_device_button" android:drawableRight="@drawable/select_white" android:drawableEnd="@drawable/select_white" style="@style/AppTheme.Button.Select" />
    <TextView android:id="@id/flash_select_file_button" android:visibility="invisible" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/select_file_button" style="@style/AppTheme.Button.Select" />
    <TextView android:id="@id/flash_selected_device_label" android:layout_marginTop="54.0dip" android:text="@string/device_selected_text" style="@style/AppTheme.Label.Centered" />
    <TextView android:id="@id/flash_selected_device_text" style="@style/AppTheme.Label.Big.Centered" />
    <TextView android:id="@id/flash_file_label" android:visibility="invisible" android:layout_marginTop="26.0dip" android:text="@string/file_to_flash_label_text" style="@style/AppTheme.Label.Centered" />
    <TextView android:id="@id/flash_file_text" android:visibility="invisible" android:text="@string/flash_no_file_selected" style="@style/AppTheme.Label.Big.Centered" />
    <TextView android:id="@id/flash_latest_version_label" android:visibility="invisible" android:layout_marginTop="26.0dip" android:text="@string/latest_version_text" style="@style/AppTheme.Label.Centered" />
    <TextView android:id="@id/flash_latest_version_text" android:visibility="invisible" style="@style/AppTheme.Label.Big.Centered" />
    <ScrollView android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="30.0dip" android:layout_marginRight="@dimen/activity_horizontal_margin">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/flash_recovery_button" android:background="@drawable/btn_white_bg" android:visibility="gone" android:text="@string/flash_recovery_button" style="@style/AppTheme.Button" />
            <Button android:id="@id/flash_boot_button" android:background="@drawable/btn_white_bg" android:visibility="gone" android:text="@string/flash_boot_button" style="@style/AppTheme.Button" />
            <Button android:id="@id/flash_reset_last_version_button" android:background="@drawable/btn_white_bg" android:visibility="invisible" android:text="@string/reset_last_version_button" style="@style/AppTheme.Button" />
            <Button android:id="@id/download_twrp_button" android:background="@drawable/btn_white_bg" android:visibility="invisible" android:text="@string/download_twrp_button" style="@style/AppTheme.Button" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>