<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="?actionBarSize">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <me.twrp.officialtwrpapp.custom.GraphHeader android:id="@id/graph_header_download" android:background="@color/colorBlack_10" android:layout_width="fill_parent" android:layout_height="wrap_content" app:detailsText="@string/download_speed_message" app:headerTitle="@string/graph_download_speed" />
            <LinearLayout android:orientation="vertical" android:id="@id/graph_download_container" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AppTheme.Graph" />
            <me.twrp.officialtwrpapp.custom.GraphHeader android:id="@id/graph_header_data_availability" android:background="@color/colorBlack_10" android:layout_width="fill_parent" android:layout_height="wrap_content" app:detailsText="@string/data_availability_message" app:headerTitle="@string/graph_data_availability" />
            <LinearLayout android:orientation="vertical" android:id="@id/graph_data_availability_container" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AppTheme.Graph" />
            <me.twrp.officialtwrpapp.custom.GraphHeader android:id="@id/graph_header_signal" android:background="@color/colorBlack_10" android:layout_width="fill_parent" android:layout_height="wrap_content" app:detailsText="@string/signals_strength_message" app:headerTitle="@string/graph_strength" />
            <LinearLayout android:orientation="vertical" android:id="@id/graph_signal_container" android:background="@color/colorBlack_10" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AppTheme.Graph" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <me.twrp.officialtwrpapp.custom.EmptyLayout android:layout_gravity="center" android:id="@id/graph_empty_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</FrameLayout>