<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="?actionBarSize"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/flash_select_device_button" android:paddingRight="@dimen/button_select_padding_right" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="@dimen/toolbar_vertical_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/select_device_button" android:drawableRight="@drawable/select_white" android:drawableEnd="@drawable/select_white" style="@style/AppTheme.Button.Select" />
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView android:id="@id/flash_select_file_button" android:visibility="gone" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/select_file_button" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button.Select" />
        <TextView android:id="@id/flash_selected_device_label" android:layout_marginTop="20.0dip" android:text="@string/device_selected_text" app:layout_constraintTop_toBottomOf="@id/flash_select_file_button" style="@style/AppTheme.Label.Centered" />
        <TextView android:id="@id/flash_selected_device_text" app:layout_constraintTop_toBottomOf="@id/flash_selected_device_label" style="@style/AppTheme.Label.Big.Centered" />
        <TextView android:id="@id/flash_file_label" android:visibility="gone" android:layout_marginTop="20.0dip" android:text="@string/file_to_flash_label_text" app:layout_constraintTop_toBottomOf="@id/flash_selected_device_text" style="@style/AppTheme.Label.Centered" />
        <TextView android:id="@id/flash_file_text" android:visibility="gone" android:text="@string/flash_no_file_selected" app:layout_constraintTop_toBottomOf="@id/flash_file_label" style="@style/AppTheme.Label.Big.Centered" />
        <Button android:id="@id/download_twrp_button" android:background="@drawable/btn_white_bg" android:visibility="gone" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/download_twrp_button" app:layout_constraintBottom_toTopOf="@id/flash_recovery_button" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button" />
        <Button android:id="@id/flash_recovery_button" android:background="@drawable/btn_white_bg" android:visibility="gone" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/flash_recovery_button" app:layout_constraintBottom_toTopOf="@id/flash_boot_button" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button" />
        <Button android:id="@id/flash_boot_button" android:background="@drawable/btn_white_bg" android:visibility="gone" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/flash_boot_button" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>