<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" android:contentDescription="@null" app:layout_constraintBottom_toTopOf="@id/first_time_twrp_agreement_text" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:id="@id/first_time_twrp_agreement_text" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/twrp_agreement" app:layout_constraintBottom_toTopOf="@id/first_time_twrp_agreement_checkbox" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Label" />
    <CheckBox android:theme="@style/AppTheme.CheckBox" android:id="@id/first_time_twrp_agreement_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/checkbox_padding_left" android:layout_marginBottom="@dimen/first_time_checkbox_padding_bottom" android:text="@string/i_agree_checkbox" app:layout_constraintBottom_toTopOf="@id/first_time_allow_root_text" app:layout_constraintLeft_toLeftOf="parent" style="@style/AppTheme.CheckBox.Text" />
    <TextView android:id="@id/first_time_allow_root_text" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/settings_allow_root_text" app:layout_constraintBottom_toTopOf="@id/first_time_allow_root_checkbox" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Label" />
    <CheckBox android:theme="@style/AppTheme.CheckBox" android:id="@id/first_time_allow_root_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/checkbox_padding_left" android:layout_marginBottom="@dimen/first_time_checkbox_padding_bottom" android:text="@string/settings_allow_root_checkbox" app:layout_constraintBottom_toTopOf="@id/first_time_agreement_text" app:layout_constraintLeft_toLeftOf="parent" style="@style/AppTheme.CheckBox.Text" />
    <TextView android:id="@id/first_time_agreement_text" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/terms_and_conditions_agreement" app:layout_constraintBottom_toTopOf="@id/first_time_terms_checkbox" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Label" />
    <CheckBox android:theme="@style/AppTheme.CheckBox" android:id="@id/first_time_terms_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/checkbox_padding_left" android:layout_marginBottom="@dimen/activity_vertical_margin" android:text="@string/enable_insight_core" app:layout_constraintBottom_toTopOf="@id/first_time_ok_button" app:layout_constraintLeft_toLeftOf="parent" style="@style/AppTheme.CheckBox.Text" />
    <Button android:id="@id/first_time_ok_button" android:background="@drawable/btn_white_bg" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/ok_button" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button" />
</androidx.constraintlayout.widget.ConstraintLayout>