<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="?actionBarSize"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView android:id="@id/backupimage_select_folder_button" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/select_folder_button" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button.Select" />
        <TextView android:id="@id/backupimage_selected_folder_label" android:layout_marginTop="20.0dip" android:text="@string/folder_selected_text" app:layout_constraintTop_toBottomOf="@id/backupimage_select_folder_button" style="@style/AppTheme.Label.Centered" />
        <TextView android:id="@id/backupimage_selected_folder_text" app:layout_constraintTop_toBottomOf="@id/backupimage_selected_folder_label" style="@style/AppTheme.Label.Big.Centered" />
        <TextView android:id="@id/backupimage_file_label" android:layout_marginTop="20.0dip" android:text="@string/backupimage_filename_label" app:layout_constraintTop_toBottomOf="@id/backupimage_selected_folder_text" style="@style/AppTheme.Label.Centered" />
        <EditText android:id="@id/backupimage_file_text" android:text="@string/backupimage_default_filename" android:maxLines="1" android:inputType="text" app:layout_constraintTop_toBottomOf="@id/backupimage_file_label" style="@style/AppTheme.Label.Big.Centered" />
        <Button android:id="@id/backup_recovery_button" android:background="@drawable/btn_white_bg" android:visibility="gone" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/backupimage_recovery_button" app:layout_constraintBottom_toTopOf="@id/backup_boot_button" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button" />
        <Button android:id="@id/backup_boot_button" android:background="@drawable/btn_white_bg" android:visibility="gone" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/backupimage_boot_button" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button" />
        <TextView android:id="@id/backupimage_error_label" android:visibility="gone" android:layout_marginBottom="20.0dip" android:text="" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Label.Centered" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>