<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/excellent_box" android:background="@drawable/square_shadow_white_20" android:layout_width="10.0dip" android:layout_height="10.0dip" android:layout_marginTop="2.0dip" />
    <TextView android:textSize="10.0dip" android:textColor="@color/colorWhite" android:id="@id/excellent_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/graph_strength_excellent" android:layout_toRightOf="@id/excellent_box" fontPath="fonts/Roboto-Medium.ttf" />
    <View android:id="@id/good_box" android:background="@drawable/square_shadow_white_40" android:layout_width="10.0dip" android:layout_height="10.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="2.0dip" android:layout_toRightOf="@id/excellent_text" />
    <TextView android:textSize="10.0dip" android:textColor="@color/colorWhite" android:id="@id/good_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/graph_strength_good" android:layout_toRightOf="@id/good_box" fontPath="fonts/Roboto-Medium.ttf" />
    <View android:id="@id/fair_box" android:background="@drawable/square_shadow_white_60" android:layout_width="10.0dip" android:layout_height="10.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="2.0dip" android:layout_toRightOf="@id/good_text" />
    <TextView android:textSize="10.0dip" android:textColor="@color/colorWhite" android:id="@id/fair_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/graph_strength_fair" android:layout_toRightOf="@id/fair_box" fontPath="fonts/Roboto-Medium.ttf" />
    <View android:id="@id/poor_box" android:background="@drawable/square_shadow_white_80" android:layout_width="10.0dip" android:layout_height="10.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="2.0dip" android:layout_toRightOf="@id/fair_text" />
    <TextView android:textSize="10.0dip" android:textColor="@color/colorWhite" android:id="@id/poor_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/graph_strength_poor" android:layout_toRightOf="@id/poor_box" fontPath="fonts/Roboto-Medium.ttf" />
    <View android:id="@id/bad_box" android:background="@drawable/square_shadow_white" android:layout_width="10.0dip" android:layout_height="10.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="2.0dip" android:layout_toRightOf="@id/poor_text" />
    <TextView android:textSize="10.0dip" android:textColor="@color/colorWhite" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/graph_strength_bad" android:layout_toRightOf="@id/bad_box" fontPath="fonts/Roboto-Medium.ttf" />
</RelativeLayout>