<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" android:contentDescription="@null" app:layout_constraintBottom_toTopOf="@id/home_twrp_flash" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <Button android:id="@id/home_twrp_flash" android:background="@drawable/btn_white_bg" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/home_twrp_flash" app:layout_constraintBottom_toTopOf="@id/home_twrp_backup" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button" />
    <Button android:id="@id/home_twrp_backup" android:background="@drawable/btn_white_bg" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/home_twrp_backup" app:layout_constraintBottom_toTopOf="@id/home_network_statistics" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button" />
    <Button android:id="@id/home_network_statistics" android:background="@drawable/btn_white_bg" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/home_network_statistics" app:layout_constraintBottom_toTopOf="@id/home_imprint" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" style="@style/AppTheme.Button" />
    <TextView android:textSize="12.0sp" android:textColor="@color/white_black_pressed_text_bg" android:gravity="center" android:id="@id/home_imprint" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_vertical_margin" android:text="@string/imprint_legal_information" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" fontPath="fonts/Roboto-Medium.ttf" />
</androidx.constraintlayout.widget.ConstraintLayout>